--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <textarea id="editor" name="name" rows="8" cols="40"></textarea>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
   <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
   
   <a class="button" id="download" href="#" download="text.md" onclick="handleDownload()">ダウンロード</a>
   
@@ -21,7 +21,7 @@
 
   <script src='https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js'></script>
   <script src='https://www.gstatic.com/firebasejs/7.5.0/firebase-storage.js'></script>
-  <script src="file.js"></script>
+  <script src="js/file.js"></script>
 </div>
 
 
@@ -71,72 +71,4 @@
     {{msg}}<br>
     <input type="text" v-model="msg">  
 
-
-<div class="box box2">
-  <p class="text">
-      CSS<br>
-      完全に理解した
-  </p>
-</div>
-
-<style>
-.main {
-    counter-reset: section;
-    font-family: sans-serif;
-}
-.text {
-    margin: 0;
-    padding: 0;
-    margin: 10px;
-}
-  
-.box {
-    font-size: 16px;
-    position: relative;
-    border: 1px solid #000000;
-    border-radius: 5px;
-    width: 140px;
-    height: 62px;
-}
-
-.box2 {
-    margin-top: 20px;
-}
-
-.box2 .text {
-    margin-left: 60px;
-    width: 150px;
-}  
-</style>
-
-<script src="script.js"></script>
-
-    
-    <video autobuffer controls id="mv" width="320">
-  <source src="img/video.mp4">
-  <p>HTML5に対応していません。</p>
-</video>
-
-<!-- 速度変更ボタン２つ -->
-<button type="button" onclick="pSpeed()">playbackRate</button>
-<button type="button" onclick="dSpeed()">defaultPlaybackRate</button>
-
-<script>
-//メディアオブジェクトの取得
-var media = document.getElementById("mv");
-
-//ループ再生を指定
-media.loop = true;
-
-//playbackRateによる速度変更
-function pSpeed()
-{
-  media.playbackRate = 0.5;
-}
-
-//defaultPlaybackRateによる速度変更
-function dSpeed()
-{
-  media.defaultPlaybackRate = 0.5;
-}
-</script>
+<script src="js/script.js"></script>
